--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h2> {{about.title}} </h2>
+<h2>lalala {{ about.title }} </h2>
 
 <article class="page">
   <h1>{{ about.title }}</h1>
